--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "express": "^4.18.1",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
